--- a/_posts/2021-04-17-07-x.md
+++ b/_posts/2021-04-17-07-x.md
@@ -1,8 +1,49 @@
 ---
-title: 应届生的面试题
+title: 应届生的面试题（五）
 categories:
 - Interview
 tags:
 - Interview
 ---
-# 长亭hw红队面试1.不出网有什么方法，正向shel l 方法除了reg之类的，还有什么？ 2.域内委派3.dpapi机制说下，能干嘛4.fastjson 不出网5.shiro漏洞类型，721原理，721利用要注意什么？7.weblogic 漏洞类型都有啥,原理8.dll劫持，dll注入9.内网优先爆破测试的端口、为什么；如果只有3389开放，爆破3389的实际影响...10.window2003 frp nps为神马用不了11.钓鱼方法姿势...除了exe这种双击的，还有什么12.redis window shell方法13.bypass uac 技巧，方法 ，原理bypass uac技巧，使用白名单，dll劫持，com接口，计划任务等14.内存马 filter shell ..........15.PTH深度原理，利用条件16.抓hash方法,有杀软抓不到尼...17.Windows defender安全机制18.有的时候抓到的hash不是明文为啥19.hvv三大洞挨个说...........20.cs是否有二次开发过,cna脚本有没有写过
+# 长亭hw红队面试
+
+1.不出网有什么方法，正向shel l 方法除了reg之类的，还有什么？ 
+
+
+2.域内委派
+
+3.dpapi机制说下，能干嘛
+
+4.fastjson 不出网
+
+5.shiro漏洞类型，721原理，721利用要注意什么？
+
+7.weblogic 漏洞类型都有啥,原理
+
+8.dll劫持，dll注入
+
+9.内网优先爆破测试的端口、为什么；如果只有3389开放，爆破3389的实际影响...
+
+10.window2003 frp nps为神马用不了
+
+11.钓鱼方法姿势...除了exe这种双击的，还有什么
+
+12.redis window shell方法
+
+13.bypass uac 技巧，方法 ，原理
+bypass uac技巧，使用白名单，dll劫持，com接口，计划任务等
+
+14.内存马 filter shell ..........
+
+15.PTH深度原理，利用条件
+
+16.抓hash方法,有杀软抓不到尼...
+
+17.Windows defender安全机制
+
+18.有的时候抓到的hash不是明文为啥
+
+19.hvv三大洞挨个说...........
+
+20.cs是否有二次开发过,cna脚本有没有写过
+
