--- a/_posts/2020-06-20-05-x.md
+++ b/_posts/2020-06-20-05-x.md
@@ -1,9 +1,9 @@
 ---
 title: 毕业之际
 categories:
-- prose
+- View
 tags:
-- prose
+- View
 ---
 
 从18岁上大学，到今天已经过了近5年。其中我的很多想法都改变了，也有很多还是老样子。就像蝴蝶效应一样，很多年前做的事情，都深深影响着今天我在哪里、做着什么事、成为了什么样的人。我还是很喜欢读书，思考一些一般人觉得无稽之谈，没必要思考的问题。作为一个死宅，还是没能学会与人打交道游刃有余的手段。
