--- a/_posts/2021-05-05-02-x.md
+++ b/_posts/2021-05-05-02-x.md
@@ -1,16 +1,17 @@
 ---
-title:  高效学习攻防的一点思考及经验
+title:  【转载】高效学习攻防的一点思考及经验
 categories:
 - expirence
 tags:
 - expirence
 ---
 
-【转载】高效学习攻防的一点思考及经验
 
 ->当你拿到某个 "技术点", 或是遇到某个什么所谓的"技巧" , 甚至是工具 之后,该如何进一步展开学习思考? 
 
 如下：
+
+```
 1.-> 这TM 到底是个什么东西?
 2.-> "正常情况下" 它都被用在什么地方? 平时主要拿它来干啥? 或者说这个东西可以协助解决一些什么样的实际业务问题 ?
 3.-> 它在"正常情况下", 具体是怎么运作的 ? 或者说其内部大致 实现原理 和 正常执行流程 是怎样的?
@@ -29,6 +30,8 @@ tags:
 -> 最终,达到真正熟练掌握某个技术点甚至某个领域
 -> 以后攻防技术的发展趋势更多可能会越来越偏向于 "专而精" ,而非 "大而全"
 -> 慢慢尝试先单点突破 再逐步全局控制
+
+```
 
 上面这种学习过程，其实无形中就是在帮你节省大量的时间，毫不夸张的说，可能你一年就把别人三年的东西全部学完了，甚至最后比别人三年学的还要扎实，因为一旦养成这种学习习惯之后基本就不用再去无休止的反攻浪费时间，最后，你会发现只要自己基础掌握的足够扎实，后面不管学什么东西，只要不是那种全新的领域或者非常高精尖的东西通常情况下入门都相对比较快，只是过程中思维转变确实需要一定的过度时间
 
