--- a/_posts/2016-01-01-shell入门.md
+++ b/_posts/2016-01-01-shell入门.md
@@ -67,7 +67,7 @@ tags:
 </div><hr><p>命令补全，当输入一个字母，再输入两个tab，意味着让shell提示接下来可以使用的命令。</p><div class="image-package">
 <img src="http://upload-images.jianshu.io/upload_images/2883590-5f51adff735adc1b.PNG?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240" data-original-src="http://upload-images.jianshu.io/upload_images/2883590-5f51adff735adc1b.PNG?imageMogr2/auto-orient/strip" data-image-slug="5f51adff735adc1b" data-width="614" data-height="201"><br><div class="image-caption"></div>
 </div><hr><p>命令别名</p><p>把ls -al，显示所有文件细节</p><p>alias 设置一个变量别名。</p><p>总是要输入cd Desktop/ 太麻烦了，不如输入cdd</p><blockquote>
-<p>vi /root/.bashrc（更改这个文件夹，才能永久保存别名设置，不然则是临时设置）</p>
+<p>vi /root/.bashrc（更改这个文件夹，才能永久保存别名设置，不然则是临时设置）</p>source ~/.bashrc 使配置生效
 <p>unalias cdd 删除设置的别名</p>
 </blockquote><div class="image-package">
 <img src="http://upload-images.jianshu.io/upload_images/2883590-c4f126eb8ff64b56.PNG?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240" data-original-src="http://upload-images.jianshu.io/upload_images/2883590-c4f126eb8ff64b56.PNG?imageMogr2/auto-orient/strip" data-image-slug="c4f126eb8ff64b56" data-width="359" data-height="79"><br><div class="image-caption"></div>
